Refactor IterateHeapWithActiveEscapeAnalysis: eliminated TestCaseBase.